--- a/content/blog/test-article.mdx
+++ b/content/blog/test-article.mdx
@@ -5,7 +5,7 @@ category: design
 date: 2026-01-23T21:50:00.000+01:00
 readTime: 2
 author: nordAi Team
-featured: false
+featured: true
 image: /placeholder.svg
 ---
 This is test article
