Update Portfolio Projects “test-portfolio”

--- a/content/portfolio/test-portfolio.mdx
+++ b/content/portfolio/test-portfolio.mdx
@@ -3,7 +3,7 @@ title: Test portfolio
 client: Test Client
 category: web
 excerpt: Test portfolio
-featured: false
+featured: true
 image: /placeholder.svg
 ---
 Test portfolio
